--- a/mysite/templates/sidebar.html
+++ b/mysite/templates/sidebar.html
@@ -1,30 +1,23 @@
 {% block sidebar %} {% load static %}
 
-<style>
-        .card{
-            box-shadow: 0 16px 48px #E3E7EB;
-        }
+<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
 
-</style>
-
-<!-- Sidebar Widgets Column -->
-<div class="col-md-4 float-right ">
-<div class="card my-4">
-        <h5 class="card-header">About Me</h5>
+<div class="col-md-4 float-right">
+  <div class="card my-4">
+    <h5 class="card-header">About Me</h5>
     <div class="card-body">
-
-        <img src="{% static 'images/mk-portrait.jpg' %}" width=100% height=100% alt="Portrait">
-        <p></p>
-        <p class="card-text">
-          Chicago-based full-stack developer.
-        </p>
-        <p>
-          My specialties include Django, Python, React and Javascript.
-        </p>
-        <a href="#"
-           class="btn btn-outline-dark">Contact Me</a>
+      <img
+        src="{% static 'images/mk-portrait.jpg' %}"
+        width="100%"
+        height="100%"
+        alt="Portrait"
+      />
+      <p></p>
+      <p class="card-text">Chicago-based full-stack developer.</p>
+      <p>My specialties include Django, Python, React and Javascript.</p>
+      <a href="#" class="btn btn-outline-dark">Contact Me</a>
     </div>
-</div>
+  </div>
 </div>
 
 {% endblock sidebar %}
