--- a/mysite/templates/sidebar.html
+++ b/mysite/templates/sidebar.html
@@ -13,9 +13,11 @@
         alt="Portrait"
       />
       <p></p>
-      <p class="card-text">Chicago-based full-stack developer.</p>
+      <p>Chicago-based full-stack developer.</p>
       <p>My specialties include Django, Python, React and Javascript.</p>
-      <a href="#" class="btn btn-outline-dark">Contact Me</a>
+      <div class="col text-center d-grid gap-2 col-12 mx-auto">
+        <a href="#" class="btn btn-outline-dark card">Contact Me</a>
+      </div>
     </div>
   </div>
 </div>
