--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -9,16 +9,25 @@
     />
     <meta name="google" content="notranslate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    {% comment %}
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    {% endcomment %}
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,27 +45,17 @@
 
   <body>
     <!-- Navigation -->
-    <nav
-      class="navbar navbar-expand-lg navbar-light bg-light shadow"
-      id="mainNav"
-    >
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}"></a>
-        <button
-          class="navbar-toggler navbar-toggler-right"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarResponsive"
-          aria-controls="navbarResponsive"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item text-black">
-              <a class="nav-link text-black font-weight-bold" href="#">
+        <div class="collapse navbar-collapse">
+          <h2 class="name_text navbar-nav me-auto mb-2 mb-lg-0">Mikhail Kontorovich</h2>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div class="ms-auto nav_text">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -75,9 +74,9 @@
                 Projects</a
               >
             </li>
-            <li class="nav-item text-black">
+            <li class="nav-item">
               <a
-                class="nav-link text-black font-weight-bold"
+                class="nav-link font-weight-bold"
                 href="https://github.com/mkontorovich"
               >
                 <svg
@@ -95,9 +94,9 @@
                 Github</a
               >
             </li>
-            <li class="nav-item text-black">
+            <li class="nav-item">
               <a
-                class="nav-link text-black font-weight-bold"
+                class="nav-link"
                 href="https://www.linkedin.com/in/mkontorovich/"
               >
                 <svg
@@ -115,8 +114,8 @@
                 Linkedin</a
               >
             </li>
-            <li class="nav-item text-black">
-              <a class="nav-link text-black font-weight-bold" href="#">
+            <li class="nav-item">
+              <a class="nav-link" href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -142,7 +141,7 @@
     <!-- Footer -->
     <footer class="py-3 bg-grey">
       <p class="m-0 text-dark text-center">
-        Made with Django, Python, Boostrap, HTML and CSS.
+        Made with Django, Python, Bootstrap, HTML and CSS.
       </p>
     </footer>
   </body>
