--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -1,35 +1,20 @@
 {% extends "base.html" %} {% block content %}
 
-<header class="masthead">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-12 mx-auto">
-        <div class="site-heading">
-          <h3 class="site-heading my-4 mt-3 text-white">
-            Mikhail Kontorovich: Web Dev Blog
-          </h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>
-
 <div class="container">
   <div class="row">
     <!-- Blog Entries Column -->
-    <div class="col-md-8 mt-3 left">
+    <div class="col-md-8 mt-4 left">
       {% for post in post_list %}
       <div class="card mb-4">
         <div class="card-body">
           <h2 class="card-title">{{ post.title }}</h2>
           <p class="card-text text-muted h6">
-            {{ post.author }} | {{ post.created_on}}
+            {{ post.author }} | {{ post.created_at}}
           </p>
-          <p class="card-text">{{post.content|slice:":200" }}</p>
+          <p class="card-text">{{post.content|slice:":150" }}...</p>
           <a
             href="{% url 'post_detail' post.slug  %}"
-            class="btn btn-outline-dark"
+            class="btn btn-outline-dark card"
             >Read More &rarr;</a
           >
         </div>
