--- a/mysite/templates/post_detail.html
+++ b/mysite/templates/post_detail.html
@@ -2,11 +2,20 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-8 card mb-4 mt-3 left top">
-      <div class="card-body">
-        <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
-        <p class="text-muted">{{ post.author }} | {{ post.created_on }}</p>
-        <p class="card-text">{{ object.content | safe }}</p>
+    <div class="col-md-8 mt-4 left">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
+          <p class="text-muted h6">{{ post.author }} | {{ post.created_at }}</p>
+          <p class="card-text">{{ object.content | safe }}</p>
+          
+
+          <a href="{% url 'home'  %}" class="btn btn-outline-dark card"
+            >&larr; Go Back</a
+          >
+
+          
+        </div>
       </div>
     </div>
     {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
