fixed navbar issues

--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -21,7 +21,7 @@
       </div>
       {% endfor %}
     </div>
-    {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
+    {% include 'sidebar.html' %}
   </div>
 </div>
-{%endblock%}
+{% endblock %}
