--- a/mysite/templates/post_detail.html
+++ b/mysite/templates/post_detail.html
@@ -5,21 +5,18 @@
     <div class="col-md-8 mt-4 left">
       <div class="card mb-4">
         <div class="card-body">
-          <h2>{% block title %} {{ object.title }} {% endblock title %}</h2>
+          <h2>{% block title %} {{ object.title }} {% endblock %}</h2>
           <p class="text-muted h6">{{ post.author }} | {{ post.created_at }}</p>
           <p class="card-text">{{ object.content | safe }}</p>
-          
 
           <a href="{% url 'home'  %}" class="btn btn-outline-dark card"
             >&larr; Go Back</a
           >
-
-          
         </div>
       </div>
     </div>
-    {% block sidebar %} {% include 'sidebar.html' %} {% endblock sidebar %}
+    {% include 'sidebar.html' %}
   </div>
 </div>
 
-{% endblock content %}
+{% endblock %}
