--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -1,27 +1,20 @@
-{% extends "base.html" %} {% block content %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Mikhail Kontorovich: Dev Blog</title>
+    {% include 'head_links.html' %}
 
-<div class="container">
-  <div class="row">
-    <!-- Blog Entries Column -->
-    <div class="col-md-8 mt-4 left">
-      {% for post in post_list %}
-      <div class="card mb-4">
-        <div class="card-body">
-          <h2 class="card-title">{{ post.title }}</h2>
-          <p class="card-text text-muted h6">
-            {{ post.author }} | {{ post.created_at}}
-          </p>
-          <p class="card-text">{{post.content|slice:":150" }}...</p>
-          <a
-            href="{% url 'post_detail' post.slug  %}"
-            class="btn btn-outline-dark card"
-            >Read More &rarr;</a
-          >
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-    {% include 'sidebar.html' %}
-  </div>
-</div>
-{% endblock %}
+  </head>
+
+  <body>
+    {% include 'navbar.html' %} {% block content %}
+    <!-- Content Goes here -->
+    {% endblock %}
+
+    <footer class="py-3 bg-grey">
+      <p class="m-0 text-dark text-center">
+        Made with Django, Python, Bootstrap, HTML and CSS.
+      </p>
+    </footer>
+  </body>
+</html>
