--- a/mysite/templates/post_detail.html
+++ b/mysite/templates/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'index.html' %} {% block content %}
 
 <div class="container">
   <div class="row">
