--- a/mysite/static/css/main.css
+++ b/mysite/static/css/main.css
@@ -4,7 +4,6 @@ body {
 
 .shadow {
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
-    color: blue;
 }
 
 .card {
@@ -15,7 +14,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 25px;
-    color: #777;
+    color: darkslategrey;
 }
 
 .nav_text {
@@ -27,6 +26,11 @@ body {
 .blog_post_title {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 30px;
-    color: red;
+    font-size: 20px;
+    color:rgb(89, 117, 117);
+}
+
+.aboutme_text {
+    font-weight: bold;
+    color:darkslategray;
 }
