--- a/mysite/templates/blog_posts.html
+++ b/mysite/templates/blog_posts.html
@@ -1,5 +1,4 @@
 {% extends "index.html" %} {% load static %} {% block content %}
-<link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
 
 <div class="container">
   <div class="row">
@@ -8,7 +7,7 @@
       {% for post in post_list %}
       <div class="card mb-4">
         <div class="card-body">
-          <h2 class="card-title">{{ post.title }}</h2>
+          <h2 class="card-title blog_post_title">{{ post.title }}</h2>
           <p class="card-text text-muted h6">
             {{ post.author }} | {{ post.created_at}}
           </p>
