--- a/mysite/templates/navbar.html
+++ b/mysite/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
   <div class="container-fluid">
-    <h2 class="name_text mb-2 mb-lg-0">Mikhail Kontorovich</h2>
+    <h2 class="name_text mb-2 mb-lg-0 name_text">Mikhail Kontorovich</h2>
   </div>
   <div class="container-fluid">
     <div class="ms-auto nav_text">
