--- a/mysite/templates/sidebar.html
+++ b/mysite/templates/sidebar.html
@@ -1,10 +1,9 @@
 {% block sidebar %} {% load static %}
-
 <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}" />
 
 <div class="col-md-4 float-right">
   <div class="card my-4">
-    <h5 class="card-header ">About Me</h5>
+    <h5 class="card-header aboutme_text">About Me</h5>
     <div class="card-body">
       <img
         src="{% static 'images/mk-portrait.jpg' %}"
@@ -21,5 +20,4 @@
     </div>
   </div>
 </div>
-
 {% endblock %}
