--- a/mysite/templates/post_detail.html
+++ b/mysite/templates/post_detail.html
@@ -5,7 +5,7 @@
     <div class="col-md-8 mt-4 left">
       <div class="card mb-4">
         <div class="card-body">
-          <h2>{% block title %} {{ object.title }} {% endblock %}</h2>
+          <h2 class="blog_post_title">{% block title %} {{ object.title }} {% endblock %}</h2>
           <p class="text-muted h6">{{ post.author }} | {{ post.created_at }}</p>
           <p class="card-text">{{ object.content | safe }}</p>
 
